tests/ui/feature-gates/feature-gate-cfg-contract-checks.stderr
error[E0658]: `cfg(ub_checks)` is experimental and subject to change
  --> $DIR/feature-gate-cfg_ub_checks.rs:4:10
   |
LL |     cfg!(ub_checks)
   |          ^^^^^^^^^
   |
   = note: see issue #133866 <https://github.com/rust-lang/rust/issues/133866> for more information
   = help: add `#![feature(cfg_contract_checks)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
